--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -344,6 +344,168 @@
     /* padding-bottom: 20px; */
 }
 
+/* OUR TEAM */
+
+.our-team-card {
+    position: relative;
+    /* width: 300px; */
+    /* height: 400px; */
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.our-team-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.our-team-overlay {
+    position: absolute;
+    bottom: 0;
+    width: 75%;
+    height: 25%;
+    /* background-color: rgba(0, 123, 255, 0.5); */
+    background-color: #1453A3CC;
+    /* border-top-left-radius: 15px; */
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    /* border-bottom-right-radius: 15px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.our-team-info {
+    text-align: center;
+    color: white;
+}
+
+.our-team-name {
+    margin: 0;
+    font-size: 1.2em;
+}
+
+.our-team-designation {
+    margin: 5px 0;
+    font-size: 1em;
+}
+
+.our-team-social-icons {
+    margin-top: 8px;
+}
+
+.our-team-icon {
+    margin: 0 8px;
+    color: var(--color-white);
+    font-size: 1.2em;
+    text-decoration: none;
+    transition: color 0.2s ease;
+}
+
+.our-team-icon:hover {
+    color: var(--color-orange);
+}
+
+/* CLIENT-SUCCESS-STORIES (NEW) */
+
+.client-success-stories {
+    background: linear-gradient(90deg, #B4D5FF 0%, #FFC183 50%, #FFE0C1 100%);
+}
+
+.client-success-stories-text {
+    position: relative;
+    z-index: 1;
+    /* padding: 10px; */
+}
+
+.client-success-stories-text::before,
+.client-success-stories-text::after {
+    content: '';
+    background: url('../images/our-services-icon-img/quote-icon.png') no-repeat;
+    background-size: contain;
+    position: absolute;
+    width: 80px;
+    height: 80px;
+}
+
+.client-success-stories-text::before {
+    top: 0;
+    left: 0;
+}
+
+.client-success-stories-text::after {
+    bottom: -30%;
+    right: 0;
+}
+
+/* @media (min-width: 1400px) {
+    .client-success-stories-text::before {
+      top: 0;
+      left: 0;
+    }
+  
+    .client-success-stories-text::after {
+      bottom: 0;
+      right: 0;
+    }
+  } */
+
+/* @media (max-width: 992px) {
+    .client-success-stories-text::before {
+      top: 0;
+      left: 0;
+    }
+  
+    .client-success-stories-text::after {
+      bottom: 0;
+      right: 0;
+    }
+  } */
+
+/* @media (max-width: 768px) {
+    .client-success-stories-text::before {
+      top: 0;
+      left: 0;
+    }
+  
+    .client-success-stories-text::after {
+      bottom: 0;
+      right: 0;
+    }
+  } */
+
+.client-top-text {
+    padding: 30px 10px 10px 10px;
+}
+
+.c-s-p-text {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.client-img img {
+    border-radius: 8px;
+}
+
+@media (max-width: 768px) {
+    .client-img {
+        padding-bottom: 20px;
+    }
+}
+
+.new-client-img {
+    width: 100%;
+    transition: opacity 0.5s ease-in-out;
+    opacity: 1;
+}
+
+.new-client-img.fade-out {
+    opacity: 0;
+}
+
 /* FAQ SECTION */
 
 @media (max-width: 768px) {
