--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -297,7 +297,7 @@ a.dropdown-item.active {
 @media (max-width: 992px) {
   .products-dropdown-button:hover {
     color: var(--color-navy-blue);
-  } 
+  }
 }
 
 /* Bottom Part */
@@ -978,6 +978,10 @@ a.dropdown-item.active {
   text-align: justify;
 }
 
+.trading-portfolio {
+  display: none;
+}
+
 .content-trading-portfolio {
   text-align: justify;
   font-size: 16px;
@@ -1083,6 +1087,41 @@ a.dropdown-item.active {
 .trading-portfolio-active-btn {
   font-size: 1.2rem !important;
   font-weight: 600 !important;
+}
+
+/* UPDATED TRADING PORTFOLIO */
+
+.updated-trading-portfolio-container {
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.updated-trading-portfolio-button {
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  color: var(--color-black);
+  background-color: #FFE0C1;
+  font-size: 1rem;
+  font-weight: 500;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.3s ease;
+}
+
+.updated-trading-portfolio-button.active {
+  background-color: #08346C;
+  color: var(--color-white);
+}
+
+.updated-trading-portfolio-images {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* REACH OUT TO US SECTION */
