download brochure button added, social media icon code commented for mobile view and the menu icon size increase for responsive views

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -366,7 +366,8 @@ a.dropdown-item.active {
 }
 
 .new-navbar-toggler>i {
-  font-size: 1.4rem;
+  /* font-size: 1.4rem; */
+  font-size: 1.8rem;
   color: var(--color-navy-blue);
 }
 
